Fix: use a tags for navbar

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Phispace</title>
   </head>
   <body class="bg-gray-800 text-purple-50">
     <div class="container flex flex-col items-center w-full mx-auto">
@@ -40,8 +40,8 @@
               ml-20
             "
           >
-            <li class="text-xl m-1">home</li>
-            <li class="text-xl m-1">work</li>
+            <li class="text-xl m-1"><a href="#">home</a></li>
+            <li class="text-xl m-1"><a href="#">working</a></li>
           </ul>
           <ul
             class="
@@ -54,8 +54,8 @@
               mr-20
             "
           >
-            <li class="text-xl m-1">contact</li>
-            <li class="text-xl m-1">about</li>
+            <li class="text-xl m-1"><a href="#">contact</a></li>
+            <li class="text-xl m-1"><a href="#">about</a></li>
           </ul>
         </div>
         <img
