Feat: add landing area and personal section

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
               ml-20
             "
           >
-            <li class="text-xl m-1"><a href="#">home</a></li>
-            <li class="text-xl m-1"><a href="#">working</a></li>
+            <li class="text-xl m-1"><a href="#">&gt;home</a></li>
+            <li class="text-xl m-1"><a href="#">&gt;work</a></li>
           </ul>
           <ul
             class="
@@ -54,8 +54,8 @@
               mr-20
             "
           >
-            <li class="text-xl m-1"><a href="#">contact</a></li>
-            <li class="text-xl m-1"><a href="#">about</a></li>
+            <li class="text-xl m-1"><a href="#">&gt;contact</a></li>
+            <li class="text-xl m-1"><a href="#">&gt;about</a></li>
           </ul>
         </div>
         <img
@@ -64,6 +64,96 @@
           alt=""
         />
       </nav>
+
+      <main class="m-5 mt-10">
+        <section>
+          <h2 class="text-5xl mt-32 leading-tight font-bold uppercase">
+            We create your digital
+          </h2>
+          <div
+            class="
+              mt-4
+              relative
+              mx-auto
+              z-10
+              w-80
+              h-80
+              p-5
+              bg-gradient-to-br
+              from-pink-700
+              via-red-500
+              to-yellow-500
+            "
+          >
+            <div class="relative w-full h-full bg-gray-800">
+              <h2
+                class="
+                  z-40
+                  absolute
+                  -top-10
+                  -left-7
+                  text-5xl
+                  leading-tight
+                  font-bold
+                  uppercase
+                "
+              >
+                space
+              </h2>
+              <a
+                class="
+                  z-40
+                  absolute
+                  -bottom-10
+                  -right-7
+                  text-5xl
+                  leading-tight
+                  font-bold
+                  uppercase
+                "
+                href="#"
+                >&gt;hire</a
+              >
+            </div>
+          </div>
+        </section>
+        <section class="mt-32 flex flex-col items-center">
+          <h2 class="text-4xl mb-24 leading-tight font-bold uppercase">
+            This is us
+          </h2>
+          <div
+            class="
+              p-5
+              rounded-full
+              bg-gradient-to-bl
+              from-green-400
+              via-blue-600
+              to-purple-900
+            "
+          >
+            <div class="p-3 bg-gray-800 rounded-full">
+              <img
+                class="w-40 h-40 object-cover rounded-full"
+                src="./assets/profileImageSmall.jpg"
+                alt="Felix Kirchhoff"
+              />
+            </div>
+          </div>
+          <div class="mt-12">
+            <h3 class="text-xl uppercase font-bold">
+              Felix &lt;phi&gt; Kirchhoff
+            </h3>
+            <p class="my-3">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+              beatae nobis nostrum ut tempore earum mollitia veritatis qui aut
+              eveniet sapiente, voluptates molestiae error exercitationem, enim
+              assumenda quaerat laborum dolores. Cumque ad atque veniam sequi
+              adipisci quis earum officiis, quaerat libero saepe fuga rerum,
+              fugit aliquid ducimus.
+            </p>
+          </div>
+        </section>
+      </main>
     </div>
   </body>
 </html>
