Feat: add second employee

--- a/index.html
+++ b/index.html
@@ -118,39 +118,73 @@
           </div>
         </section>
         <section class="mt-32 flex flex-col items-center">
-          <h2 class="text-4xl mb-24 leading-tight font-bold uppercase">
+          <h2 class="text-4xl mb-12 leading-tight font-bold uppercase">
             This is us
           </h2>
-          <div
-            class="
-              p-5
-              rounded-full
-              bg-gradient-to-bl
-              from-green-400
-              via-blue-600
-              to-purple-900
-            "
-          >
-            <div class="p-3 bg-gray-800 rounded-full">
-              <img
-                class="w-40 h-40 object-cover rounded-full"
-                src="./assets/profileImageSmall.jpg"
-                alt="Felix Kirchhoff"
-              />
+          <div class="flex flex-col items-center my-8">
+            <div
+              class="
+                p-5
+                rounded-full
+                bg-gradient-to-bl
+                from-green-400
+                via-blue-600
+                to-purple-900
+              "
+            >
+              <div class="p-3 bg-gray-800 rounded-full">
+                <img
+                  class="w-40 h-40 object-cover rounded-full"
+                  src="./assets/profileImageSmall.jpg"
+                  alt="Felix Kirchhoff"
+                />
+              </div>
+            </div>
+            <div class="mt-12">
+              <h3 class="text-xl uppercase font-bold">
+                Felix &lt;phi&gt; Kirchhoff
+              </h3>
+              <p class="my-3">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+                beatae nobis nostrum ut tempore earum mollitia veritatis qui aut
+                eveniet sapiente, voluptates molestiae error exercitationem,
+                enim assumenda quaerat laborum dolores. Cumque ad atque veniam
+                sequi adipisci quis earum officiis, quaerat libero saepe fuga
+                rerum, fugit aliquid ducimus.
+              </p>
             </div>
           </div>
-          <div class="mt-12">
-            <h3 class="text-xl uppercase font-bold">
-              Felix &lt;phi&gt; Kirchhoff
-            </h3>
-            <p class="my-3">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
-              beatae nobis nostrum ut tempore earum mollitia veritatis qui aut
-              eveniet sapiente, voluptates molestiae error exercitationem, enim
-              assumenda quaerat laborum dolores. Cumque ad atque veniam sequi
-              adipisci quis earum officiis, quaerat libero saepe fuga rerum,
-              fugit aliquid ducimus.
-            </p>
+
+          <div class="flex flex-col items-center my-8">
+            <div
+              class="
+                p-5
+                rounded-full
+                bg-gradient-to-br
+                from-red-200
+                via-pink-500
+                to-purple-900
+              "
+            >
+              <div class="p-3 bg-gray-800 rounded-full">
+                <img
+                  class="w-40 h-40 object-cover rounded-full"
+                  src="./assets/doge.png"
+                  alt="Felix Kirchhoff"
+                />
+              </div>
+            </div>
+            <div class="mt-12">
+              <h3 class="text-xl uppercase font-bold">Doge &lt;the coin&gt;</h3>
+              <p class="my-3">
+                Lorem wow ipsum dolor sit amet consectetur adipisicing elit.
+                Ullam beatae nobis nostrum ut tempore earum mollitia veritatis
+                qui aut eveniet sapiente, voluptates so much molestiae error
+                exercitationem, enim assumenda quaerat laborum dolores. Cumque
+                ad atque veniam sequi adipisci quis earum officiis, quaerat
+                libero saepe fuga rerum, fugit aliquid ducimus.
+              </p>
+            </div>
           </div>
         </section>
       </main>
