Feat: add max width to main

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         />
       </nav>
 
-      <main class="m-5 mt-10">
+      <main class="m-5 mt-10 max-w-screen-md">
         <section>
           <h2 class="text-5xl mt-32 leading-tight font-bold uppercase">
             We create your digital
