Fix: optimize margins

--- a/index.html
+++ b/index.html
@@ -192,8 +192,17 @@
       </section>
 
       <!-- projects section  -->
-      <section>
-        <h2 class="text-3xl leading-tight font-bold uppercase mb-5">
+      <section class="mt-24">
+        <h2
+          class="
+            mb-16
+            text-center text-3xl
+            leading-tight
+            font-bold
+            uppercase
+            mb-5
+          "
+        >
           Projects
         </h2>
         <ul class="flex flex-wrap justify-evenly">
