Feat: add footer and change colors

--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
             class="
               p-4
               m-5
-              bg-gradient-to-br
-              from-green-700
+              bg-gradient-to-bl
+              from-yellow-400
               via-green-900
               to-gray-900
               shadow-lg
-              hover:from-green-500 hover:via-green-700 hover:to-gray-900
+              hover:from-yellow-300 hover:via-green-700 hover:to-gray-900
             "
           >
             <a
@@ -212,11 +212,11 @@
               p-4
               m-5
               bg-gradient-to-br
-              from-blue-800
-              via-indigo-800
+              from-green-600
+              via-blue-800
               to-gray-900
               shadow-lg
-              hover:from-blue-600 hover:via-indigo-600 hover:to-gray-900
+              hover:from-green-400 hover:via-blue-600 hover:to-gray-900
             "
           >
             <a href="https://drawing-app-brown.vercel.app/" target="_blank">
@@ -246,12 +246,12 @@
             class="
               p-4
               m-5
-              bg-gradient-to-br
-              from-yellow-800
-              via-yellow-900
+              bg-gradient-to-bl
+              from-pink-800
+              via-blue-900
               to-gray-900
               shadow-lg
-              hover:from-yellow-600 hover:via-yellow-700 hover:to-gray-900
+              hover:from-pink-600 hover:via-blue-700 hover:to-gray-900
             "
           >
             <a href="https://todo-app-one-tau.vercel.app/" target="_blank">
@@ -361,6 +361,7 @@
             from-red-400
             via-pink-600
             to-purple-900
+            max-w-sm
           "
         >
           <div class="relative w-full h-full bg-gray-800">
@@ -455,5 +456,16 @@
         </div>
       </section>
     </main>
+    <footer
+      class="py-8 max-w-screen-md w-full flex justify-center items-center"
+    >
+      <span class="text-right w-2/5 text-gray-400">Felix Kirchhoff</span>
+      <img
+        class="w-10 mx-3 pt-3 filter grayscale brightness-200 opacity-40"
+        src="./assets/Logo2_schlagschatten_narrow.png"
+        alt=""
+      />
+      <span class="w-2/5 text-gray-400">since 2021</span>
+    </footer>
   </body>
 </html>
